--- a/Backend/productService/src/main/resources/application.yml
+++ b/Backend/productService/src/main/resources/application.yml
@@ -6,6 +6,14 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/e-commerce
 
+  cloud:
+    compatibility-verifier:
+      enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/    # optional
+
 
 server:
   port: 8082
