--- a/Backend/user-service/src/main/resources/application.yml
+++ b/Backend/user-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  cloud:
+    compatibility-verifier:
+      enabled: true
 
   security:
     oauth2:
@@ -17,7 +20,10 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/Microservice-Realm
 
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/    # optional
 server:
   port: 8081
 
