--- a/Backend/productService/src/main/resources/application.yml
+++ b/Backend/productService/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/e-commerce
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/Microservice-Realm
+
   cloud:
     compatibility-verifier:
       enabled: true
@@ -13,6 +19,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/    # optional
+
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
+    instance-id: product-Server:localhost:8082
 
 
 server:
