--- a/Backend/apiGateway/src/main/resources/application.yml
+++ b/Backend/apiGateway/src/main/resources/application.yml
@@ -43,6 +43,11 @@ spring:
               predicates:
                 - Path=/product/**
 
+            - id: cart-service
+              uri: lb://cartService
+              predicates:
+                  - Path=/cart/**
+
 # --- Eureka Client Configuration ---
 eureka:
   client:
