--- a/Backend/apiGateway/src/main/resources/application.yml
+++ b/Backend/apiGateway/src/main/resources/application.yml
@@ -53,6 +53,11 @@ spring:
               predicates:
                 - Path=/inventory/**
 
+            - id: orders-service
+              uri: lb://order-service
+              predicates:
+                - Path=/order/**
+
 # --- Eureka Client Configuration ---
 eureka:
   client:
