--- a/Backend/cartService/src/main/resources/application.yml
+++ b/Backend/cartService/src/main/resources/application.yml
@@ -11,7 +11,16 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/Microservice-Realm
-
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: cart-service-group
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*" # Trust all packages for deserialization
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: com.cartService.dto.KafkaDto
 
   cloud:
     compatibility-verifier:
